feat(183-data-validation): add validation to detail endpoints - /hotels/{hotelId}/roomTypes/{roomTypeId} - /hotels/{hotelId}/ratePlans/{ratePlanId} - /airlines/{airlineId}/flights/{flightId} - /airlines/{airlineId}/flights/{flightId}/instances/{flightInstanceId}
