# src/controllers/room-types.js
@@ -1,4 +1,11 @@
-const { Http404Error } = require('../errors');
+const { Http404Error, HttpValidationError } = require('../errors');
+const { DataFormatValidator } = require('../services/validation');
+const { formatError } = require('../services/utils');
+const {
+  VALIDATION_WARNING_HEADER,
+  SCHEMA_PATH,
+  ROOM_TYPE_MODEL,
+} = require('../constants');
 
 const detectRatePlans = (roomTypeId, ratePlansArray) => {
   return ratePlansArray.filter((rp) => rp.roomTypeIds && rp.roomTypeIds.indexOf(roomTypeId) > -1);
@@ -14,9 +21,7 @@ const detectAvailability = (roomTypeId, availabilityObject) => {
   };
 };
 
-const getPlainHotel = async (hotel, fieldsQuery) => {
-  let fieldsArray = Array.isArray(fieldsQuery) ? fieldsQuery : fieldsQuery.split(',');
-  fieldsArray = fieldsArray.filter((x) => !!x);
+const getPlainHotel = async (hotel, fieldsArray) => {
   const resolvedFields = ['descriptionUri.roomTypes'];
   if (fieldsArray.indexOf('ratePlans') > -1) {
     resolvedFields.push('ratePlansUri');
@@ -45,10 +50,16 @@ const setAdditionalFields = (roomType, plainHotel, fieldsQuery) => {
   return roomType;
 };
 
+const _normalizeQuery = (fieldsQuery) => {
+  let fieldsArray = Array.isArray(fieldsQuery) ? fieldsQuery : fieldsQuery.split(',');
+  return fieldsArray.filter((x) => !!x);
+};
+
 const findAll = async (req, res, next) => {
   const fieldsQuery = req.query.fields || [];
+  const fieldsArray = _normalizeQuery(fieldsQuery);
   try {
-    const plainHotel = await getPlainHotel(res.locals.wt.hotel, fieldsQuery);
+    const plainHotel = await getPlainHotel(res.locals.wt.hotel, fieldsArray);
     let roomTypes = plainHotel.dataUri.contents.descriptionUri.contents.roomTypes;
     roomTypes = roomTypes.map((roomType) => {
       return setAdditionalFields(roomType, plainHotel, fieldsQuery);
@@ -62,14 +73,32 @@ const findAll = async (req, res, next) => {
 const find = async (req, res, next) => {
   let { roomTypeId } = req.params;
   const fieldsQuery = req.query.fields || [];
+  const fieldsArray = _normalizeQuery(fieldsQuery);
   try {
-    const plainHotel = await getPlainHotel(res.locals.wt.hotel, fieldsQuery);
+    const plainHotel = await getPlainHotel(res.locals.wt.hotel, fieldsArray);
     let roomTypes = plainHotel.dataUri.contents.descriptionUri.contents.roomTypes;
     let roomType = roomTypes.find((rt) => { return rt.id === roomTypeId; });
     if (!roomType) {
       return next(new Http404Error('roomTypeNotFound', 'Room type not found'));
     }
     roomType = setAdditionalFields(roomType, plainHotel, fieldsQuery);
+    roomType.dataFormatVersion = plainHotel.dataUri.contents.dataFormatVersion; // TODO move to setAdditionalFields when used in list as well
+    const swaggerDocument = await DataFormatValidator.loadSchemaFromPath(SCHEMA_PATH, ROOM_TYPE_MODEL, fieldsArray.length === 0 ? undefined : fieldsArray, {});
+    try {
+      DataFormatValidator.validate(roomType, 'room type', ROOM_TYPE_MODEL, swaggerDocument.components.schemas);
+    } catch (e) {
+      if (e instanceof HttpValidationError) {
+        let err = formatError(e);
+        err.data = roomType;
+        if (e.code && e.code.valid) {
+          return res.set(VALIDATION_WARNING_HEADER, e.code.errors).status(200).json(err.toPlainObject());
+        } else {
+          return res.status(err.status).json(err.toPlainObject());
+        }
+      } else {
+        next(e);
+      }
+    }
     res.status(200).json(roomType);
   } catch (e) {
     next(e);
